--- a/styles/sort.module.scss
+++ b/styles/sort.module.scss
@@ -9,6 +9,32 @@
   @apply p-10;
 }
 
+.cardInputDiv {
+  background: #ffe0f5;
+  background: linear-gradient(304deg, #fcf1d2 36%, #ffe0f5 56%);
+  background: -moz-linear-gradient(304deg, #fcf1d2 36%, #ffe0f5 56%);
+  background: -webkit-linear-gradient(304deg, #fcf1d2 36%, #ffe0f5 56%);
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 4px 4px 12px #e8e8e8;
+
+  @apply m-10;
+  @apply p-10;
+}
+
+.sortButton {
+  background: #e0e7ff;
+  background: linear-gradient(150deg, #e0e7ff 18%, #d2dbfc 77%);
+  background: -moz-linear-gradient(150deg, #e0e7ff 18%, #d2dbfc 77%);
+  background: -webkit-linear-gradient(150deg, #e0e7ff 18%, #d2dbfc 77%);
+
+  @apply p-8;
+}
+
+.sortButtonText {
+  @apply m-3;
+  @apply p-1;
+}
+
 .resultDiv {
   background: linear-gradient(13deg, #ffd4f4 14%, #d2c5fc 73%);
   background: -moz-linear-gradient(13deg, #ffd4f4 14%, #d2c5fc 73%);
